Add deployment scripts for storage + refactoring